<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >
    
   <!-- android:background="@drawable/scanlinesblue2"-->

    <!-- Botões que levaram aos laytous PhotoScreen, TextScreen e VideoScreen -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:layout_margin="0dp"
        android:background="@drawable/icon_topo_fundo" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="0dp" >

            <ImageView
                android:id="@+id/iconHouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_margin="20dp"
                android:src="@drawable/icon_topo_home" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="0dp"
                android:src="@drawable/icon_topo_divisao" />

            <TextView
                android:id="@+id/tvFiles"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginTop="-5dp"
                android:padding="20dp"
                android:gravity="center"
                android:shadowColor="#004B64"
                android:shadowDx="0"
                android:shadowDy="2"
                android:shadowRadius="0.3"
                android:text="@string/files"
                android:textColor="#fff"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_margin="0dp"
                android:layout_weight="0.41"
                android:background="@drawable/icon_topo_fundo" >
            </RelativeLayout>

            <!-- <DigitalClock
                android:id="@+id/digitalClock1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="0.23"
                android:gravity="right"
                android:shadowColor="#004B64"
                android:shadowDx="0"
                android:shadowDy="1"
                android:shadowRadius="0.5"
                android:text="@string/digitalClock"
                android:textColor="#7AC5DE"
                android:textSize="37sp" /> -->
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="490dp"
        android:layout_height="154dp"
        android:layout_gravity="center" >
        
        

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:background="@drawable/icon_media_fundo_button"
                android:onClick="onText" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imageViewTEXTS"
                        android:layout_width="wrap_content"
                        android:layout_height="88dp"
                        android:layout_marginBottom="0dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.05"
                        android:contentDescription="Texts"
                        android:src="@drawable/icon_media_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:text="@string/texts"
                        android:textColor="#006F93"
                        android:textSize="18dp" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:background="@drawable/icon_media_fundo_button" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imageViewIMAGES"
                        android:layout_width="wrap_content"
                        android:layout_height="88dp"
                        android:layout_marginBottom="0dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.05"
                        android:contentDescription="Photos"
                        android:src="@drawable/icon_media_image"
                        android:onClick="onPhoto" />

                    <TextView
                        android:id="@+id/textViewIMAGES"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:text="@string/photos"
                        android:textColor="#006F93"
                        android:textSize="18dp"
                        android:onClick="onPhoto" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/videolay"
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:background="@drawable/icon_media_fundo_button" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imageViewVIDEOS"
                        android:layout_width="wrap_content"
                        android:layout_height="88dp"
                        android:layout_marginBottom="0dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.05"
               			android:contentDescription="Videos"
                        android:src="@drawable/icon_media_video"
                        android:onClick="onVideo" />

                    <TextView
                        android:id="@+id/textViewVIDEOS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:text="@string/videos"
                        android:textColor="#006F93"
                        android:textSize="18dp"
                        android:onClick="onVideo" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/audiolay"
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:layout_margin="10dp"
                android:background="@drawable/icon_media_fundo_button" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imageViewAudio"
                        android:layout_width="wrap_content"
                        android:layout_height="88dp"
                        android:layout_marginBottom="0dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.05"
               			android:contentDescription="Videos"
                        android:src="@drawable/icon_media_audio"
                        android:onClick="onVideo" />

                    <TextView
                        android:id="@+id/textViewAudio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:text="@string/audios"
                        android:textColor="#006F93"
                        android:textSize="18dp"
                        android:onClick="onAudio" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        
        
        
        
        
        
        
        
        
        
    </LinearLayout>

</FrameLayout>